--- a/src/app/Modulos/usuarios/conductor/listar-conductor-vehiculos/listar-conductor-vehiculos.component.html
+++ b/src/app/Modulos/usuarios/conductor/listar-conductor-vehiculos/listar-conductor-vehiculos.component.html
@@ -3,7 +3,7 @@
   <h1>Listado Conductores</h1>
 </div>
 <div class="col-md-6" align="center">
-  <a href="conductores/registrar" class="btn-dark btn-lg btn-block text-center" >Registrar Conductor</a>
+  <a href="conductores/registrar/{{ this.id }}" class="btn-dark btn-lg btn-block text-center" >Registrar Conductor</a>
 </div>
   <div class="scroll">
 
