--- a/src/app/Modulos/servicios/geolocalizacion/geolocalizacion.component.html
+++ b/src/app/Modulos/servicios/geolocalizacion/geolocalizacion.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <button (click)="drawRoute()" class="btn-route">Dibujar RUTA</button>
-  <button (click)="testMarker()" class="btn-route">Marcador </button>
+  <button (click)="testMarker()" class="btn-route">Volver</button>
 </div>
 
 <div class="wrapper">
