--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,76 @@
 html, body { height: 100%; }
 body { margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;}
+
+  .map-container {
+    width: 60%;
+    height: 300px;
+    border-radius: 1rem;
+    border: solid 10px white;
+    box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.035),
+    0 100px 80px rgba(0, 0, 0, 0.07);
+  }
+
+  .marker {
+    width: 50px;
+    height: 50px;
+    background-image: url("./assets/img/carro.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .box-inputs {
+     background-color: white;
+     width: 58%;
+     border-radius: .5rem;
+     border: solid 2px #00000008;
+     padding: 1rem;
+     box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.035),
+     0 100px 80px rgba(0, 0, 0, 0.07);
+  }
+
+  .mock-input {
+    background: white;
+    margin-bottom: .5rem;
+    box-shadow: 0 0 10px #0000001a;
+    color: #808080;
+    min-height: 18px;
+  }
+
+  .mock-label{
+    padding: .25rem;
+    font-weight: 600;
+  }
+
+  .geocoder {
+    margin-bottom: .5rem;
+  }
+
+  .geocoder, .mapboxgl-ctrl {
+    width: 100%;
+    max-width: 100%;
+    border-radius: 0;
+    background-color: white;
+  }
+
+  .active-way {
+    border: solid 2px #ab00ee;
+    box-shadow: 0 0 10px #81047b;
+  }
+
+  .btn-route {
+    background-color: white;
+    padding: .5rem 1rem;
+    border: solid 2px gray;
+  }
+
+  .wrapper{
+    display: flex;
+    justify-content: center;
+  }
+
+  .mapboxgl-ctrl-icon {
+   background: transparent url(//maps.gstatic.com/tactile/zoom/icon-sprite-1x.png) 0 0 no-repeat;
+   padding: 7px;
+  }
