--- a/src/app/Modulos/servicios/vehiculos-disponibles/vehiculos-disponibles.component.html
+++ b/src/app/Modulos/servicios/vehiculos-disponibles/vehiculos-disponibles.component.html
@@ -46,7 +46,7 @@
       <br>
       <strong>Fecha desde la que trabaja<h5 class="card-title text-center">{{conductor.FechaInicio}}</h5></strong>
       <br>
-      <strong>Celular<h5 class="card-title text-center">{{conductor.Celular}}</h5></strong>
+      <strong>Celular<h5 class="card-title text-center">{{conductor.IdInfo}}</h5></strong>
       <div class="modal-footer">
         <button type="button" class="btn btn-info" (click)="openAsignar(conductor.IdInfo)">Asignar!</button>
       </div>
