--- a/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.html
+++ b/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.html
@@ -17,6 +17,7 @@
       <th scope="col">Dirección de la entrega</th>
       <th scope="col">Fecha fin</th>
       <th scope="col">Precio</th>
+      <th scope="col">Estado</th>
       <th scope="col">Acciones</th>
     </tr>
   </thead>
@@ -26,6 +27,7 @@
       <td class="text-center">{{servicio.DireccionEntrega}}</td>
       <td class="text-center">{{servicio.FechaFin}}</td>
       <td class="text-center">{{servicio.PrecioServicio}}</td>
+      <td class="text-center">{{servicio.Estado}}</td>
       <td class="text-center">
         <a href="conductores/detalle" style="color: rgb(255, 0, 0); margin:auto;"><i class="fa fa-times"></i></a>
         <a href="servicios/geolocalizacion" style="color: rgb(255, 255, 255)"><i class="fa fa-street-view"></i></a>
