--- a/src/app/Modulos/servicios/vehiculos-disponibles/vehiculos-disponibles.component.html
+++ b/src/app/Modulos/servicios/vehiculos-disponibles/vehiculos-disponibles.component.html
@@ -26,7 +26,7 @@
         <td>{{vehiculo.Placa}}</td>
         <td>{{vehiculo.NombreConductor}}</td>
         <td class="text-center">
-          <button type="button" (click)="openFunciones(contenido, vehiculo.IdServicio, vehiculo.IdConductor)" ><i class="fa fa-check" style="color: #31d2f2;"></i></button>
+          <button type="button" (click)="openFunciones(contenido, vehiculo.IdInfo)" ><i class="fa fa-check" style="color: #31d2f2;"></i></button>
         </td>
       </tr>
     </tbody>
