--- a/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.html
+++ b/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.html
@@ -6,9 +6,9 @@
   <a href="servicios/pedir" class="btn-dark btn-lg btn-block text-center" >Pedir servicio</a>
 </div>
 <div class="col-md-4" align="center">
-  <a href="conductores/registrar" class="btn-info btn-lg btn-block text-center" >Descargar informe</a>
+  <button type="button" class="btn-info btn-lg btn-block text-center" (click)="imprimirLista()">Descargar informe</button>
 </div>
-  <div class="scroll">
+  <div class="scroll"  id="htmlData">
 
       <table>
   <thead>
