--- a/src/app/Modulos/servicios/aceptar-servicio/aceptar-servicio.component.html
+++ b/src/app/Modulos/servicios/aceptar-servicio/aceptar-servicio.component.html
@@ -1,6 +1,6 @@
   <div align="center">
     <h1 style="color: rgba(151,0,255,1);">Servicios pendientes por aceptar</h1>
-    <a href="servicios/" class="btn-dark btn-lg btn-block text-center" >Registrar Conductor</a>
+    <a href="servicios/" class="btn-dark btn-lg btn-block text-center" >Servicios</a>
   </div>
   <div class="scroll">
 
