--- a/src/app/Modulos/vehiculos/crear-vehiculo/crear-vehiculo.component.html
+++ b/src/app/Modulos/vehiculos/crear-vehiculo/crear-vehiculo.component.html
@@ -95,7 +95,7 @@
                       </div>
                     </div>
                     <select name="IdTipoVehiculo" formControlName="IdColor" class="form-control" id="">
-                      <option value="">Marca</option>
+                      <option value="">Color</option>
                       <option *ngFor="let Color of servicioVehiculo.Color"  value="{{Color.Id}}" >{{ Color.NombreColor }}</option>
                     </select>
                   </div>
