--- a/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.css
+++ b/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.css
@@ -5,7 +5,6 @@ table {
   border-collapse: collapse;
   border: 3px solid rgb(0, 0, 0);
 }
-
 thead th:nth-child(1) {
   width: 10%;
 }
@@ -23,9 +22,12 @@ thead th:nth-child(4) {
 }
 
 thead th:nth-child(5) {
-  width: 13%;
+  width: 10%;
 }
 
+thead th:nth-child(6) {
+  width: 13%;
+}
 a i:nth-child(1){
   margin-left: 20px;
   margin-right: 20px;
