--- a/src/app/Modulos/usuarios/registrar-usuario/registrar-usuario.component.html
+++ b/src/app/Modulos/usuarios/registrar-usuario/registrar-usuario.component.html
@@ -240,7 +240,7 @@
     </div>
     <div class="form-group" align="center">
       <button class="btn-dark btn-lg btn-block" type="submit" [disabled]="gestionUsuarioService.formularioRegistroUsuario.invalid"><i class="fa fa-save" style="color: rgb(119, 0, 255);"></i>Registrar</button>
-      <a class="btn-dark btn-lg btn-block" href="Inicio/Login/"><i class="fa fa-undo" style="color: rgb(119, 0, 255);"></i>Volver</a>
+      <a class="btn-dark btn-lg btn-block" href="usuarios/"><i class="fa fa-undo" style="color: rgb(119, 0, 255);"></i>Volver</a>
     </div>
 </form>
 
