--- a/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.html
+++ b/src/app/Modulos/servicios/listar-servicios/listar-servicios.component.html
@@ -4,6 +4,7 @@
 </div>
 <div class="col-md-4" align="center">
   <button type="button" class="btn-info btn-lg btn-block text-center" (click)="imprimirLista()">Descargar informe</button>
+  </div>
 <div *ngIf="this.Rol === '1' || this.Rol === '3' && this.token !== null">
   <div class="col-md-4" align="center">
     <a href="servicios/pedir" class="btn-dark btn-lg btn-block text-center" >Pedir servicio</a>
