--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nz-sider class="menu-sidebar"
             nzCollapsible
             nzWidth="256px"
-            nzBreakpoint="md"
+            nzBreakpoint
             [(nzCollapsed)]="isCollapsed"
             [nzTrigger]="null"
             style="background: linear-gradient(90deg, rgba(39,35,40,1) 50%, rgba(151,0,255,1) 100%);">
