--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
           </div>
           <div *ngIf="this.Rol === '3' && this.token !== null">
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/conductores">Servicios</a>
+              <a routerLink="/servicios">Servicios</a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/usuarios/perfil">Ver perfil</a>
