--- a/src/app/Modulos/usuarios/conductor/editar-conductor/editar-conductor.component.html
+++ b/src/app/Modulos/usuarios/conductor/editar-conductor/editar-conductor.component.html
@@ -1,1 +1,184 @@
-<p>editar-conductor works!</p>
+<form [formGroup]="gestionUsuarioService.formularioRegistroUsuario" (ngSubmit)="onSubmit()">
+    <div class="contact-form row" *ngFor="let usuario of editarDetalle">
+
+      <h1 align="center" style="color: blueviolet;">Editar Conductor</h1>
+
+      <div class="form-group col-md-6">
+        <input type="hidden" name="CodigoV" formControlName="CodigoV" [ngModel]="usuario.CodigoV">
+        <input type="hidden" name="IdGenero" formControlName="IdGenero" [ngModel]="usuario.IdGenero">
+        <input type="hidden" name="IdEstadoUsuario" formControlName="CodigoV" [ngModel]="usuario.IdEstadoUsuario">
+        <input type="hidden" name="IdInfo" formControlName="CodigoV" [ngModel]="usuario.IdInfo">
+        
+      </div>
+
+      
+      <!--Direccion-->
+
+    <div class="form-field col-lg-4">
+        <input class="input-text" type="text" name="Direccion" formControlName="Direccion" [ngModel]="usuario.Direccion">
+        <label for="direccion" class="label">Dirección</label>
+      </div>
+  
+      <div class="form-field col-lg-4" *ngIf="Direccion.invalid && (Direccion.touched || Direccion.dirty)">
+  
+        <div class="alert" *ngIf="this.Direccion.hasError('required')">
+          La dirección es requerida
+        </div>
+      </div>
+
+      <!--Tipo de documento-->
+
+      <div class="form-field col-lg-4">
+        <select class="label-pablo" name="IdTipoDocumento" formControlName="IdTipoDocumento">
+        <option value=""  style="background: #000">Seleccione su documento</option>
+        <option *ngFor="let Documento of gestionUsuarioService.tipoDocumento" style="background: #000"
+        value="{{ Documento.IdTipoDocumento }}"> {{Documento.NombreDoocumento }}</option>
+        </select>
+      </div>
+
+      <div class="form-field col-lg-4" *ngIf="IdTipoDocumento.invalid && (IdTipoDocumento.touched || IdTipoDocumento.dirty)">
+
+        <div class="alert" *ngIf="this.IdTipoDocumento.hasError('required')">
+          El tipo de documento es requerido
+        </div>
+      </div>
+
+      <!--Tipo de usuario-->
+
+      <div class="form-field col-lg-4">
+        <select class="label-pablo" name="IdRol" formControlName="IdRol">
+        <option value="" style="background: #000">Seleccione su rol</option>
+        <option *ngFor="let Rol of gestionUsuarioService.roles" style="background: #000"
+        value="{{Rol.IdRol}}">{{Rol.NombreRol}}</option>
+        </select>
+      </div>
+
+      <div class="form-field col-lg-4" *ngIf="IdRol.invalid && (IdRol.touched || IdRol.dirty)">
+
+        <div class="alert" *ngIf="this.IdRol.hasError('required')">
+          El tipo de usuario es requerido
+        </div>
+      </div>
+
+      <!--Nombre-->
+
+      <div class="form-field col-lg-4">
+        <input name="Nombre" class="input-text" type="text" formControlName = "Nombre" [ngModel]="usuario.Nombre">
+        <label for="Nombre" class="label">Nombre</label>
+      </div>
+      <div class="form-field col-lg-4" *ngIf="Nombre.invalid && (Nombre.touched || Nombre.dirty)">
+
+        <div class="alert" *ngIf="this.Nombre.hasError('required')">
+          El nombre es requerido
+        </div>
+        <div class="alert" *ngIf="this.Nombre.hasError('pattern')">
+          El nombre debe contener solo letras
+        </div>
+        <div class="alert" *ngIf="this.Nombre.hasError('maxlength')">
+          El nombre debe tener máximo 30 carácteres
+        </div>
+        <div class="alert" *ngIf="this.Nombre.hasError('minlength')">
+          El nombre debe tener mínimo 3 carácteres
+        </div>
+      </div>
+
+      <!--Apellido-->
+
+      <div class="form-field col-lg-4">
+        <input class="input-text" type="text" name="Apellido" formControlName="Apellido" [ngModel]="usuario.Apellido">
+        <label for="Apellido" class="label">Apellido</label>
+      </div>
+
+      <div class="form-field col-lg-4" *ngIf="Apellido.invalid && (Apellido.touched || Apellido.dirty)">
+
+        <div class="alert" *ngIf="this.Apellido.hasError('required')">
+          El Apellido es requerido
+        </div>
+        <div class="alert" *ngIf="this.Apellido.hasError('pattern')">
+          El Apellido debe contener solo letras
+        </div>
+        <div class="alert" *ngIf="this.Apellido.hasError('maxlength')">
+          El Apellido debe tener máximo 50 carácteres
+        </div>
+        <div class="alert" *ngIf="this.Apellido.hasError('minlength')">
+          El Apellido debe tener mínimo 3 carácteres
+        </div>
+      </div>
+
+      <!--Correo-->
+
+       <div class="form-field col-lg-4">
+        <input class="input-text" type="email" name="Email" formControlName="Email" [ngModel]="usuario.Email">
+        <label for="Email" class="label">Correo</label>
+      </div>
+
+      <div class="form-field col-lg-4" *ngIf="Email.invalid && (Email.touched || Email.dirty)">
+
+        <div class="alert" *ngIf="this.Email.hasError('required')">
+          El correo electrónico es requerido
+        </div>
+        <div class="alert" *ngIf="this.Email.hasError('pattern')">
+          El formato del correo electrónico es incorrecto
+        </div>
+      </div>
+      <!--Celular-->
+
+      <div class="form-field col-lg-4">
+        <input class="input-text" type="number" name="Celular" formControlName="Celular" [ngModel]="usuario.Celular">
+        <label for="celular" class="label">Celular</label>
+      </div>
+
+      <div class="form-field col-lg-4" *ngIf="Celular.invalid && (Celular.touched || Celular.dirty)">
+
+        <div class="alert" *ngIf="this.Celular.hasError('required')">
+          El celular es requerido
+        </div>
+        <div class="alert" *ngIf="this.Celular.hasError('pattern')">
+          El celular debe contener solo números
+        </div>
+        <div class="alert" *ngIf="this.Celular.hasError('minlength')">
+          El celular debe tener mínimo 5 carácteres
+        </div>
+      </div>
+
+      <!--Numero de documento-->
+
+      <div class="form-field col-lg-4">
+        <input class="input-text" type="number" name="NumeroDocumento" formControlName="NumeroDocumento" [ngModel]="usuario.NumeroDocumento">
+        <label for="NumeroDocumento" class="label">Número de documento</label>
+      </div>
+
+      <div class="form-field col-lg-4" *ngIf="NumeroDocumento.invalid && (NumeroDocumento.touched || NumeroDocumento.dirty)">
+
+        <div class="alert" *ngIf="this.NumeroDocumento.hasError('required')">
+          El número de documento es requerido
+        </div>
+        <div class="alert" *ngIf="this.NumeroDocumento.hasError('pattern')">
+          El número de documento debe contener solo números
+        </div>
+        <div class="alert" *ngIf="this.NumeroDocumento.hasError('maxlength')">
+          El número de documento debe tener máximo 15 carácteres
+        </div>
+        <div class="alert" *ngIf="this.NumeroDocumento.hasError('minlength')">
+          El número de documento debe tener mínimo 5 carácteres
+        </div>
+      </div>
+
+
+      <!--Foto-->
+
+      <div class="form-field col-lg-12">
+        <div class="custom-input-file">
+          <input class="input-file" type="file" name="FotoConductor" formControlName="FotoConductor"  (change)="readUrl($event)">
+          Subir foto
+        </div>
+      </div>
+      <img [src]="url">
+
+      <!--Registrar-->
+    </div>
+    <div class="form-group" align="center">
+      <button class="btn-dark btn-lg btn-block" type="submit" ><i class="fa fa-save" style="color: rgb(119, 0, 255);"></i>Editar</button>
+      <a class="btn-dark btn-lg btn-block" href="usuarios/"><i class="fa fa-undo" style="color: rgb(119, 0, 255);"></i>Volver</a>
+    </div>
+</form>
